# sdlTest

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c
.cache/clangd/index/: main.c.DC985BE5FE6DE8F6.idx  main.cpp.560044ECB5943333.idx
src/: main.c  main.cpp
